footer fix for when text wraps to new line

--- a/app/assets/includes/admin/custom/css/sticky-footer.css
+++ b/app/assets/includes/admin/custom/css/sticky-footer.css
@@ -13,6 +13,7 @@ body {
 	/* Set the fixed height of the footer here */
 	height: 60px;
 	background-color: #f5f5f5;
+	overflow: hidden;
 }
 
 #footer .footer-txt {
